observability/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
---
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
---
apiVersion: v1
kind: Namespace
metadata:
  name: victoriametrics
---
apiVersion: v1
kind: Namespace
metadata:
  name: jaeger
---
apiVersion: v1
kind: Namespace
metadata:
  name: opentelemetry
---
apiVersion: v1
kind: Namespace
metadata:
  name: loki
---
apiVersion: v1
kind: Namespace
metadata:
  name: tempo
