observability/loki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: loki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:3.0.0
          args:
            - "-config.file=/etc/loki/local-config.yaml"
          ports:
            - containerPort: 3100
          volumeMounts:
            - name: config-volume
              mountPath: /etc/loki
            - name: storage-volume
              mountPath: /data # This matches the path_prefix in the config
      volumes:
        - name: config-volume
          configMap:
            name: loki-config
        - name: storage-volume
          persistentVolumeClaim:
            claimName: loki-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: loki
  namespace: loki
spec:
  ports:
    - port: 3100
      targetPort: 3100
  selector:
    app: loki
